--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "daisyui": "^4.12.10",
     "tailwindcss": "^3.4.12"
   }
