--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://2024-fall-afe-mowe.github.io/tca-sw-deckbuilding",
   "dependencies": {
+    "@aws-sdk/util-dynamodb": "^3.699.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
